Fix horizontal scroll for group members preview and translations

--- a/src/app/modules/pages/group/group-preview/group-preview-member/user-profile-preview.scss
+++ b/src/app/modules/pages/group/group-preview/group-preview-member/user-profile-preview.scss
@@ -1,6 +1,7 @@
 .user-profile {
-  margin-top: 55px;
   text-align: center;
+  display: inline-block;
+  margin: 55px 15px 10px;
 
   .user-body {
     margin-top: 10px;
@@ -15,6 +16,7 @@
   .user-name {
     margin-top: -3px;
   }
+
   .user-avatar {
     margin: -50px auto 0;
     border-radius: 50%;
@@ -31,23 +33,4 @@
     }
   }
 
-}
-
-.scrolling-wrapper {
-  overflow-y: hidden;
-  white-space: nowrap;
-
-  .user-profile {
-    display: inline-block;
-    margin-left: 15px;
-    margin-bottom: 10px;
-    margin-right: 15px;
-  }
-}
-
-.user-profile {
-  display: inline-block;
-  margin-left: 15px;
-  margin-bottom: 10px;
-  margin-right: 15px;
 }
