--- a/src/assets/scss/core/_group.scss
+++ b/src/assets/scss/core/_group.scss
@@ -34,3 +34,8 @@
   padding: 3px 6px;
   border-radius: 50%;
 }
+
+.scrolling-wrapper {
+  overflow-y: hidden;
+  white-space: nowrap;
+}
